# rust-obj

./: Cargo.toml  README.md  manifest.scm  renderdoc-no-vendor-swig.patch  transforms.sh
assets/: ter-u12b.bdf
shaders/: compare_cs.glsl  compare_vk.glsl  compare_vs.glsl  frag.glsl  frag_color_vk.glsl  frag_textured.glsl  frag_vk.glsl  text_vk.glsl  vert.glsl  vert_vk.glsl
src/: controls.rs  error.rs  main.rs  partition.rs  util.rs
src/depth_classify/: dual_render.rs  mod.rs
src/grender/: controls.rs  mod.rs
src/mesh/: image.rs  mat.rs  mod.rs  mtl.rs  primative.rs  texcoord.rs  tri.rs  vec3.rs
src/mesh/color/: consts.rs  mod.rs
src/vkrender/: init.rs  mod.rs  subpasspreset.rs
src/vkrender/render_systems/: mod.rs  object_system.rs
src/vkrender/render_systems/ui/: font.rs  mod.rs  ui_system.rs
src/wavefrontobj/: mod.rs  ppm.rs
test_assets/: bunny_mat.mtl
test_assets/chapel/: chapel_diffuse.ppm  chapel_normal.ppm  chapel_obj.mtl  chapel_spec.ppm
