[package]
name = "obj"
version = "0.1.1"
authors = ["gfaster"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = {version = "0.32.1", optional = true}
vulkano = {version = "0.33.0", optional = true}
vulkano-win = {version = "0.33.0", optional = true}
vulkano-shaders = {version = "0.33.0", optional = true}
image = "0.24.6"
nalgebra = "0.32.2"
nalgebra-glm = "0.18.0"
winit = "0.28.6"

[features]
default = ["vulkano"]
glium = ["dep:glium"]
vulkano = ["dep:vulkano", "dep:vulkano-win", "dep:vulkano-shaders"]
