[package]
name = "obj"
version = "0.1.1"
authors = ["gfaster", "cubostar"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = {version = "0.33.0"}
vulkano-win = {version = "0.33.0"}
vulkano-shaders = {version = "0.33.0"}
image = "0.24.6"
nalgebra = {version = "0.32.2", features = ["bytemuck"]}
nalgebra-glm = {version = "0.18.0", features = ["convert-bytemuck"]}
winit = "0.28.6"
metis = {git = "https://github.com/gfaster/METIS.git"}

[features]
